# mini-backend-mongo

./: .env.example  README.md  justfile  pyproject.toml
data/: task-tracker.json
scripts/: import_space.py
src/spacenote/: __main__.py  app.py  config.py
src/spacenote/core/: core.py  db.py
src/spacenote/core/modules/comment/: __init__.py  models.py  service.py
src/spacenote/core/modules/counter/: __init__.py  models.py  service.py
src/spacenote/core/modules/note/: __init__.py  models.py  service.py
src/spacenote/core/modules/space/: models.py  service.py
src/spacenote/core/modules/user/: models.py  service.py
src/spacenote/web/: deps.py  error_handlers.py  openapi.py  server.py
src/spacenote/web/routers/: comments.py  notes.py  spaces.py  users.py
